[package]
name = "synth_tools"
version = "0.1.0"
authors = ["Author Name <tom@zwizwa.be>"]

# disable stack unwinding on panic for `cargo build` and `cargo build --release`
[profile.dev]
panic = "abort" 

[profile.release]
panic = "abort"

[dependencies]
panic-halt = "0.2.0"
heapless = "0.8.0"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"


